# cherrycandy

./: LICENSE  README.md  pyproject.toml  run.bat
cherrycandy/: bot.py  main.py
cherrycandy/commands/: test.py
cherrycandy/data/: lang.json
cherrycandy/utils/: handler.py  language.py
